--- a/prerequisites.yml
+++ b/prerequisites.yml
@@ -20,6 +20,7 @@
         - libxslt1-dev
         - libffi-dev
         - libmysqlclient-dev
+        - libpq-dev
         - python-dev
         - python-pip
         - python-virtualenv
